--- a/Proyecto1P/Proyecto1P/Proyecto1P.vbproj
+++ b/Proyecto1P/Proyecto1P/Proyecto1P.vbproj
@@ -69,6 +69,9 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Administrador.vb" />
+    <Compile Include="Cliente.vb" />
+    <Compile Include="Detalle.vb" />
+    <Compile Include="Factura.vb" />
     <Compile Include="Module1.vb" />
     <Compile Include="My Project\AssemblyInfo.vb" />
     <Compile Include="My Project\Application.Designer.vb">
