Creación de métodos agregarProducto, guardarProducto, cargarProvincia, mostrarProvincias. creación de clase Provincia.

--- a/Proyecto1P/Proyecto1P/Proyecto1P.vbproj
+++ b/Proyecto1P/Proyecto1P/Proyecto1P.vbproj
@@ -90,6 +90,7 @@
       <DesignTimeSharedInput>True</DesignTimeSharedInput>
     </Compile>
     <Compile Include="Producto.vb" />
+    <Compile Include="Provincia.vb" />
     <Compile Include="Usuario.vb" />
     <Compile Include="Vendedor.vb" />
   </ItemGroup>
